--- a/Frontend/src/app/features/post/components/add-edit-post/add-edit-post.component.html
+++ b/Frontend/src/app/features/post/components/add-edit-post/add-edit-post.component.html
@@ -1,1 +1,30 @@
-<p>add-edit-post works!</p>
+<div class="row mt-3">
+    <div class="col-lg-4 offset-lg-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card text-center">
+                <div class="card-header">
+                    Agregar Post
+                </div>
+                <div class="card-body">
+                    <form action="">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="titlePost" placeholder="Titulo Post">
+                            <label for="titlePost">Titulo Post</label>
+                        </div>
+                        <div class="mb-3">
+                            <div class="form-floating">
+                                <textarea class="form-control" placeholder="Descripción del Post"
+                                    id="descriptionPost"></textarea>
+                                <label for="descriptionPost">Descripción del Post</label>
+                            </div>
+                        </div>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                            <button class="btn btn-secondary" type="button" routerLink="/">Volver</button>
+                            <button class="btn btn-primary" type="button">Agregar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
