feat: agregar componente de registro de usuario

--- a/Frontend/src/app/features/auth/components/register/register.component.html
+++ b/Frontend/src/app/features/auth/components/register/register.component.html
@@ -1,1 +1,18 @@
-<p>register works!</p>
+<main class="form-signin w-100 m-auto">
+    <form>
+        <img src="assets/img/user.png" alt="Imagen Login" width="72" height="72"
+            class="mb-4 rounded-circle d-block mx-auto">
+
+        <h1 class="h3 mb-3 fw-normal text-center">REGISTRO</h1>
+
+        <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Usuario</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Password</label>
+        </div>
+        <button class="btn btn-primary w-100 py-2" type="submit">Aceptar</button>
+    </form>
+</main>
